--- a/styles/styles.css
+++ b/styles/styles.css
@@ -205,3 +205,100 @@ body {
     font-size: 1.4rem;
     color: var(--color-secondary);
 }
+
+/* Experience */
+
+.experience_container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.experience_img {
+    width: 40%;
+}
+
+.experience_text {
+    width: 60%;
+    margin-left: 3rem;
+}
+
+.experience_title {
+    font-size: 5rem;
+    font-weight: 500;
+    line-height: 7rem;
+}
+
+.experience_description {
+    font-size: 1.4rem;
+    font-weight: 400;
+    margin: .8rem 0rem;
+}
+
+.experience_btn {
+    text-decoration: none;
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    padding: 1.2rem 2rem;
+    border-radius: .5rem;
+    display: inline-block;
+    letter-spacing: 1.2px;
+}
+
+
+
+/* help */
+
+.help {
+    padding: 7rem 0rem;
+}
+
+.help_container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.help_heading {
+    width: 45%;
+}
+
+
+.help_title {
+    font-size: 3.5em;
+    color: var(--color-secondary);
+    font-weight: 500;
+    line-height: 8rem;
+}
+
+.help_title>span {
+    color: var(--color-primary);
+}
+
+.help_text {
+    color: var(--color-secondary);
+}
+
+.help_content {
+    width: 55%;
+    margin-left: 4rem;
+    display: grid;
+    gap: 4rem;
+    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+}
+
+.help_item {
+    display: flex;
+    align-items: center;
+}
+
+.help_item_text {
+    margin-left: 1.5rem;
+    color: var(--color-secondary);
+}
+
+.help_item_title {
+    color: var(--color-secondary);
+    font-style: 2.5rem;
+}
