--- a/styles/styles.css
+++ b/styles/styles.css
@@ -192,7 +192,7 @@ body {
 
 .service {
     border-radius: 8px;
-    box-shadow: 0px 2px 4px 0px rgba(171, 190, 209, 0.50);
+    box-shadow: 0px 2px 4px 0px rgba(171, 190, 209, 0.40);
     padding: 2rem .5rem;
 }
 
@@ -251,6 +251,7 @@ body {
 
 .help {
     padding: 7rem 0rem;
+    background-color: var(--color-gray);
 }
 
 .help_container {
@@ -303,6 +304,133 @@ body {
     font-style: 2.5rem;
 }
 
-.exp_continer {
-    flex-direction: row-reverse;
+/* testimonial */
+
+.testimonial {
+    background-color: var(--color-gray);
+    padding: 5rem 0rem;
+}
+
+.testimonial_containner {
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.test_img {
+    width: 40%;
+}
+
+.test_content {
+    width: 60%;
+}
+
+.test_p {
+    color: var(--color-secondary);
+    font-size: 1.6rem;
+}
+
+.test_name {
+    color: var(--color-primary);
+    font-size: 2rem;
+    font-weight: 600;
+    margin-top: 1.5rem;
+}
+
+.test_designation {
+    color: var(--color-secondary);
+    font-size: 1.4rem;
+    margin-bottom: 3rem;
+}
+
+.test_logos {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.test_link {
+    text-decoration: none;
+    color: var(--color-primary);
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+/* Blog */
+
+.blog_container {
+    width: 100%;
+    text-align: center;
+}
+
+.blogs {
+    margin-top: 3rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-gap: 2rem;
+}
+
+.blog_items {
+    /* border: 1px solid red; */
+    width: 100%;
+    position: relative;
+}
+
+.blog_body {
+    /* border: 1px solid fuchsia; */
+    width: 65%;
+    margin: 0rem auto;
+    color: var(--color-secondary);
+    background-color: #F5F7FA;
+    box-shadow: 0px 2px 4px 0px rgba(171, 190, 209, 0.40);
+    padding: 1rem 1.5rem;
+    border-radius: .8rem;
+    position: absolute;
+    left: 8.5rem;
+    bottom: -5rem;
+}
+
+.blog_title {
+    font-size: 2rem;
+    color: var(--color-text-gray);
+    font-weight: 600;
+    line-height: 2.8rem;
+    margin-bottom: 2.5rem;
+}
+
+.blog_link {
+    text-decoration: none;
+    color: var(--color-primary);
+    font-size: 2rem;
+    font-weight: 500;
+}
+
+/* demo */
+
+.demo {
+    background-color: var(--color-gray);
+}
+
+.demo_container {
+    text-align: center;
+    padding: 4rem 0rem;
+}
+
+.demo_title {
+    font-size: 6.5rem;
+    font-weight: 500;
+    color: var(--color-secondary);
+    line-height: 8rem;
+    margin-bottom: 3rem;
+}
+
+.demo_btn {
+    text-decoration: none;
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    padding: 1.2rem 2rem;
+    border-radius: .5rem;
+    display: inline-block;
+    letter-spacing: 1.2px;
 }
