footer section added and style in css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,8 @@
     --color-white: #fff;
     --color-gray: #f1f1f1;
     --color-text-gray: #4D4D4D;
+
+    --footer-text-color: #F5F7FA;
 }
 
 html {
@@ -384,7 +386,7 @@ body {
     color: var(--color-secondary);
     background-color: #F5F7FA;
     box-shadow: 0px 2px 4px 0px rgba(171, 190, 209, 0.40);
-    padding: 1rem 1.5rem;
+    padding: 1.3rem 1.5rem;
     border-radius: .8rem;
     position: absolute;
     left: 8.5rem;
@@ -414,7 +416,7 @@ body {
 
 .demo_container {
     text-align: center;
-    padding: 4rem 0rem;
+    padding: 5rem 0rem;
 }
 
 .demo_title {
@@ -433,4 +435,83 @@ body {
     border-radius: .5rem;
     display: inline-block;
     letter-spacing: 1.2px;
+}
+
+/* footer */
+
+.footer {
+    border: 1px solid red;
+    background-color: var(--color-secondary);
+    padding: 7rem 0rem;
+}
+
+.footer_logo {
+    font-size: 2.8rem;
+    text-decoration: none;
+    color: var(--color-white);
+    font-weight: 600;
+    display: inline-block;
+    margin-bottom: 3.5rem;
+}
+
+.footer_copy {
+    color: var(--footer-text-color);
+}
+
+.footer_copy_one {
+    margin-bottom: .5rem;
+}
+
+.footer_social_links_container {
+    margin-top: 3.5rem;
+}
+
+.footer_continer {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-gap: 2rem;
+}
+
+.footer_items_title {
+    margin-bottom: 2.4rem;
+    font-size: 2rem;
+    color: var(--footer-text-color);
+    font-weight: 600;
+}
+
+.footer_item_name {
+    color: var(--footer-text-color);
+    margin-bottom: 1rem;
+    font-size: 1.4rem;
+}
+
+.footer_items {
+    width: 100%;
+    position: relative;
+}
+
+.footer_email_input {
+    width: 80%;
+    border-radius: 8px;
+    background: var(--color-white);
+    opacity: .6;
+    border: none;
+    padding: 1.2rem 1.5rem;
+    color: black;
+}
+
+.footer_email_input:focus {
+    outline: .3rem solid var(--color-primary);
+}
+
+input::placeholder {
+    color: #0f0f0f;
+    letter-spacing: .1rem;
+}
+
+.email_send {
+    position: absolute;
+    right: 9rem;
+    top: 6.5rem;
 }
