Make responsive for mobile device

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -522,3 +522,113 @@ input::placeholder {
     right: 9rem;
     top: 6.5rem;
 }
+
+/* Responsive Design */
+
+
+
+/* Small */
+
+@media screen and (max-width:576px) {
+
+    .nav_container,
+    .nav_list,
+    .header_container_wraper,
+    .experience_container,
+    .help_container,
+    .testimonial_containner,
+    .test_logos {
+        flex-direction: column;
+    }
+
+    .header_container_wraper {
+        gap: 5rem;
+    }
+
+    .nav_list {
+        margin-bottom: 2rem;
+    }
+
+    .nav {
+        height: 32rem;
+    }
+
+    .nav_list {
+        gap: 2rem;
+    }
+
+    .header_text {
+        width: 100%;
+        text-align: center;
+    }
+
+    .header_title {
+        font-size: 5rem;
+        line-height: 7rem;
+    }
+
+    .header_img {
+        width: 100%;
+        height: 5rem;
+    }
+
+    .experience_img {
+        width: 100%;
+    }
+
+    .experience_text {
+        width: 100%;
+        margin-left: 0rem;
+    }
+
+    .help_heading {
+        width: 100%;
+    }
+
+    .help_content {
+        /* justify-items: center; */
+        margin-top: 5rem;
+        width: 100%;
+        margin-left: 0rem;
+    }
+
+    .test_img {
+        width: 100%;
+    }
+
+    .test_content {
+        width: 100%;
+    }
+
+
+    .test_logos {
+        gap: 2rem;
+    }
+
+    .demo_title {
+        font-size: 4.5rem;
+        line-height: 6rem;
+    }
+
+    .footer_continer {
+        align-items: center;
+        justify-items: center;
+    }
+
+    /* 
+    .footer_items {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    } */
+}
+
+
+/* Medium */
+
+@media screen and (min-width:576px) and (max-width:992px) {}
+
+/* Large */
+
+@media screen and (min-width:992) and (max-width:1400) {}
